# zipprof

./: CMakeLists.txt  LICENSE  Makefile
include/: zipprof.h
lib/: miniz.c
src/: huff.cc  huff.hh  io.cc  io.hh  io_inl.hh  main.cc  utils.hh  utils_inl.hh  zip.cc  zip.hh  zip_inl.hh  zipprof.cc  zipprof_impl.hh
tests/: test_utils.cc  test_zip.cc  test_zipprof.cc  testutils_inl.hh
tests/data/: lipsum-big.txt  lipsum-big.txt.z  lipsum.txt  lipsum.txt.z  shakespeare.txt.z
